--- a/src/index.css
+++ b/src/index.css
@@ -1,20 +1,20 @@
 @font-face {
   font-family: 'Aeonik';
-  src: url('./fonts/Aeonik-Regular.ttf') format('truetype');
+  src: url('./fonts/Ubuntu-Regular.ttf') format('truetype');
   font-weight: 300;
   font-style: normal;
 }
 
 @font-face {
   font-family: 'Aeonik';
-  src: url('./fonts/Aeonik-Bold.ttf') format('truetype');
+  src: url('./fonts/Ubuntu-Bold.ttf') format('truetype');
   font-weight: 600;
   font-style: normal;
 }
 
 @font-face {
   font-family: 'Roboto Mono';
-  src: url('./fonts/RobotoMono-Regular.ttf') format('truetype');
+  src: url('./fonts/Ubuntu-Regular.ttf') format('truetype');
   font-weight: 400;
   font-style: normal;
 }
